--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:text="VSSUT CSE APP \n Version: 1.1"
+            android:text=" College Comrade"
             android:textAlignment="center"
             android:textSize="32sp"
             android:textColor="#F00000" />
@@ -51,14 +51,16 @@
             android:id="@+id/rittik"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rittik Biswal:  \n8895350695     "
-            android:layout_alignParentLeft="true"
+            android:text="Developer Students Club (DSC, VSSUT):  \n8895350695     "
+            android:textAlignment="center"
             android:layout_below="@id/dev"
             android:textSize="20sp"
             android:layout_marginStart="22dp"
             android:layout_marginTop="50dp"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             />
-        <TextView
+        <!--<TextView
             android:id="@+id/aitik"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,7 +70,7 @@
             android:textSize="20sp"
             android:layout_alignParentRight="true"
             android:layout_marginEnd="22dp"
-            android:layout_marginTop="50dp" />
+            android:layout_marginTop="50dp" />-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
