--- a/app/src/main/res/layout/activity_lecturenotes.xml
+++ b/app/src/main/res/layout/activity_lecturenotes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,13 +8,13 @@
     android:background="#F8BBD0">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="32dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUBJECTS"
+        android:text="@string/subjects"
         android:textSize="32sp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"/>
@@ -25,30 +24,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Mathematics" />
+        android:text="@string/mathematics" />
 
     <Button
         android:id="@+id/oop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="OOPS" />
+        android:text="@string/oops" />
 
     <Button
         android:id="@+id/dsa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DSA" />
+        android:text="@string/dsa" />
 
     <Button
         android:id="@+id/dec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DEC" />
+        android:text="@string/dec" />
 
     <Button
         android:id="@+id/eco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Economics" />
+        android:text="@string/economics" />
     </LinearLayout>
 </ScrollView>
