--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,14 +10,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Department Of \nComputer Science and Engineering"
+            android:text="@string/department_of_ncomputer_science_and_engineering"
             android:textColor="#000"
             android:textSize="32sp"
             android:textAlignment="center"/>
@@ -37,16 +36,16 @@
                     android:id="@+id/tt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Timetable"
-                    android:textSize="20dp"
+                    android:text="@string/timetable"
+                    android:textSize="20sp"
                     android:layout_marginTop="22dp"
                     android:layout_gravity="center" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Faculty  "
-                    android:textSize="20dp"
+                    android:text="@string/faculty"
+                    android:textSize="20sp"
                     android:id="@+id/fac"
                     android:layout_marginTop="50dp"
                     android:layout_gravity="center" />
@@ -61,17 +60,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="SYLLABUS  "
+                    android:text="@string/syllabus"
                     android:id="@+id/sb"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_marginTop="22dp" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Holidays"
+                    android:text="@string/holidays"
                     android:id="@+id/ho"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_marginTop="50dp"
                     android:layout_gravity="center" />
 
@@ -85,7 +84,7 @@
             android:textSize="20sp"
             android:layout_gravity="center"
 
-            android:text="Lecture Notes"/>
+            android:text="@string/lecture_notes"/>
 
         <Button
             android:id="@+id/contact"
@@ -94,7 +93,7 @@
             android:layout_marginTop="50dp"
             android:textSize="25sp"
             android:layout_gravity="center"
-            android:text="Contact Us"/>
+            android:text="@string/contact_us"/>
 
 
     </LinearLayout>
