--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,14 +16,14 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:text=" College Comrade"
+            android:text="@string/college_comrade"
             android:textAlignment="center"
             android:textSize="32sp"
             android:textColor="#F00000" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About"
+            android:text="@string/about"
             android:textSize="32sp"
             android:id="@+id/a"
             android:layout_below="@id/cs"
@@ -35,14 +34,14 @@
             android:layout_below="@id/a"
             android:id="@+id/about"
             android:layout_margin="32dp"
-            android:text="This app contains all information about the computer science and engineering department for second year of VSSUT, Burla.\n\nThe information like Time-Table, Syllabus, Lecture Notes, etc enables user to access all the requirements of a student in department. The information here guides you in the academic areas in healthy manner. This is really a handy app"/>
+            android:text="@string/this_app_contains_all_information_about_the_computer_science_and_engineering_department_for_second_year_of_vssut_burla_n_nthe_information_like_time_table_syllabus_lecture_notes_etc_enables_user_to_access_all_the_requirements_of_a_student_in_department_the_information_here_guides_you_in_the_academic_areas_in_healthy_manner_this_is_really_a_handy_app"/>
         <TextView
             android:id="@+id/dev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="26sp"
             android:layout_marginTop="100dp"
-            android:text="Develpoed by-"
+            android:text="@string/develpoed_by"
             android:textAlignment="center"
             android:layout_below="@id/about"
             android:layout_centerInParent="true"
@@ -51,7 +50,7 @@
             android:id="@+id/rittik"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Developer Students Club (DSC, VSSUT):  \n8895350695     "
+            android:text="@string/developer_students_club_dsc_vssut_n8895350695"
             android:textAlignment="center"
             android:layout_below="@id/dev"
             android:textSize="20sp"
@@ -76,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rittik"
             android:layout_centerHorizontal="true"
-            android:text="We value your feedback"
+            android:text="@string/we_value_your_feedback"
             android:textSize="25sp"
             android:layout_marginTop="100dp"/>
 
