--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -95,6 +95,14 @@
             android:textSize="25sp"
             android:layout_gravity="center"
             android:text="Contact Us"/>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:textSize="25sp"
+            android:layout_gravity="center"
+            android:text="Logout"/>
 
 
     </LinearLayout>
