--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,8 +44,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_columnWeight="1
-                    "
+                    android:layout_columnWeight="1"
+                    app:cardCornerRadius="20dp"
                     android:background="@drawable/main_bg"
                     android:layout_rowWeight="1"
                     app:cardElevation="6dp"
@@ -83,7 +83,7 @@
                     android:layout_rowWeight="1"
                     app:cardElevation="6dp"
 
-
+                    app:cardCornerRadius="20dp"
                     android:id="@+id/sb"
                     android:layout_margin="12dp"
                     >
@@ -120,7 +120,7 @@
                     app:cardElevation="6dp"
                     android:background="@drawable/main_bg"
                     android:id="@+id/fac"
-
+                    app:cardCornerRadius="20dp"
                     android:layout_margin="12dp"
                     >
                     <LinearLayout
@@ -128,6 +128,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="16dp"
+
                         android:background="@drawable/main_bg"
                         android:orientation="vertical">
                         <ImageView
@@ -153,7 +154,7 @@
                     android:layout_rowWeight="1"
                     app:cardElevation="6dp"
                     android:background="@drawable/main_bg"
-
+                    app:cardCornerRadius="20dp"
                     android:id="@+id/ho"
                     android:layout_margin="12dp"
                     >
@@ -190,7 +191,7 @@
                     app:cardElevation="6dp"
                     android:id="@+id/ln"
                     android:background="@drawable/main_bg"
-
+                    app:cardCornerRadius="20dp"
                     android:layout_margin="12dp"
                     >
                     <LinearLayout
@@ -223,7 +224,7 @@
                     android:layout_rowWeight="1"
                     app:cardElevation="6dp"
                     android:background="@drawable/main_bg"
-
+                    app:cardCornerRadius="20dp"
                     android:id="@+id/btncontact"
                     android:layout_margin="12dp"
                     >
