--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textSize="26sp"
             android:layout_marginTop="100dp"
-            android:text="Develpoed by-"
+            android:text="Developed by-"
             android:textAlignment="center"
             android:layout_below="@id/about"
             android:layout_centerInParent="true"
