--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,111 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D9EA59"
     tools:context=".MainActivity">
-    <LinearLayout
-        android:layout_margin="32dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="Department Of Computer Science And Engineering\n"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon"
-            android:scaleType="fitXY"
-            android:layout_gravity="center_horizontal"/>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="Department Of Computer Science And Engineering"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <LinearLayout
+        android:id="@+id/page1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0">
 
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your name"
-            android:layout_marginTop="50dp"
-            android:inputType="textAutoComplete"/>
+            android:autofillHints="name"
+            android:hint="Name"
+            android:inputType="textAutoComplete" />
+
         <EditText
             android:id="@+id/regd1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your Registration No."
-            android:layout_marginTop="30dp"
-            android:maxLength="10"
+            android:layout_marginTop="20dp"
+            android:autofillHints="registration_number"
             android:digits="0123456789"
-            android:inputType="textAutoComplete"/>
+            android:hint="Registration Number"
+            android:inputType="textAutoComplete"
+            android:maxLength="10" />
+
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/no"
-            android:digits="0123456789"
-            android:maxLength="10"
-            android:layout_height="wrap_content"
-            android:hint="Enter your mobile number"
-            android:layout_marginTop="30dp"
-            android:inputType="textAutoComplete"/>
-        <EditText
             android:layout_width="match_parent"
-            android:id="@+id/email"
             android:layout_height="wrap_content"
-            android:hint="Enter your email"
-            android:layout_marginTop="30dp"
-            android:inputType="textEmailAddress"
-            />
+            android:layout_marginTop="20dp"
+            android:autofillHints="number"
+            android:digits="0123456789"
+            android:hint="Mobile Number"
+            android:inputType="textAutoComplete"
+            android:maxLength="10" />
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/page2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="email"
+            android:hint="Email"
+            android:inputType="textEmailAddress"/>
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:autofillHints="password"
             android:hint="Password (8 characters)"
-            android:layout_marginTop="30dp"
             android:inputType="textPassword"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
         <Button
+            android:id="@+id/back"
             android:layout_width="wrap_content"
-            android:id="@+id/login"
             android:layout_height="wrap_content"
-            android:text="Sign in"
-            android:textSize="20sp"
-            android:textAllCaps="false"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:text="Back"
+            android:textSize="20sp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/forget_password_contact"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
-            android:textSize="20sp"
-            android:textAllCaps="false"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
-        </LinearLayout>
+            android:layout_marginEnd="20dp"
+            android:enabled="false"
+            android:text="Sign Up"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
+
         <Button
+            android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/contact"
-            android:text="Forgot password ?\nContact Us\n"
             android:layout_gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
+            android:text="Sign in"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/forget_password_contact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
+        <Button
+            android:id="@+id/forget_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="8dp"
+            android:text="Forgot password?"
+            android:textSize="16sp" />
 
+        <Button
+            android:id="@+id/contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Contact Us"
+            android:textSize="16sp" />
 
-</ScrollView>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
