--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -22,7 +22,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="80dp"
             android:text="FOR QUERIES"
             android:textColor="#9C1B1A1A"
@@ -32,7 +32,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="110dp"
             android:text="CONTACT"
             android:textColor="#9C1B1A1A"
@@ -42,10 +42,10 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="150dp"
             android:gravity="left"
-            android:text="8895350695"
+            android:text="dscvssutburla@gmail.com"
             android:textColor="#9C1B1A1A"
             android:textSize="20sp" />
 
