--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#4286f5</item>
-        <item name="colorPrimaryDark">#85C1E9</item>
+        <item name="colorPrimary">#000080</item>
+        <item name="colorPrimaryDark">#191970</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 </resources>
